# docs/swagger.json
@@ -1528,8 +1528,8 @@
                 "parameters": [
                     {
                         "type": "boolean",
-                        "description": "Only actual repetitive tasks",
-                        "name": "onlyActual",
+                        "description": "filter repetitive tasks by actual property",
+                        "name": "actual",
                         "in": "query"
                     }
                 ],
